fix(mdInput): fix regression that broke input placeholders on Firefox
Change unfocused placeholder color to inherit instead of transparent.

Closes #2162 and #2480

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -112,7 +112,7 @@ md-input-container {
   }
 
   &:not( .md-input-has-value ) input:not( :focus ) {
-    color: transparent;
+    color: inherit;
   }
 
 
